# zheng

./: CLAUDE.md  Cargo.toml  README.md
docs/explanation/: CCS.md  README.md  bbg-integration.md  fri-to-whir.md  landscape.md  performance.md  polynomial-commitments.md  recursion.md  security.md  stark.md  sumcheck.md  superspartan.md  the-name.md  trace-to-proof.md  whir.md  whirlaway.md  why-zheng.md
docs/reference/: README.md  stir.md
graph/: SuperSpartan.md  sumcheck.md
reference/: CCS.md  README.md  accumulator.md  api.md  binary-pcs.md  binius.md  constraints.md  expander-pcs.md  fri.md  isogeny-pcs.md  pcs.md  polynomial-commitment.md  recursion-spec.md  recursion.md  ring-pcs.md  stark.md  state-operations.md  sumcheck.md  superspartan.md  tensor.md  transcript.md  tropical-pcs.md  verifier.md  whir.md  whirlaway.md
reference/props/: README.md  algebraic-extraction.md  binius-pcs.md  brakedown-pcs.md  folding-first.md  gpu-prover.md  gravity-commitment.md  proof-carrying.md  ring-aware-fhe.md  tensor-compression.md  universal-accumulator.md  zheng-2.md
roadmap/: README.md  binius-pcs.md  ccs-jets.md  folding-first.md  gpu-prover.md  gravity-commitment.md  proof-carrying.md  ring-aware-fhe.md  universal-accumulator.md  zheng-2.md
specs/: README.md  api.md  binary-pcs.md  recursion.md  ring-pcs.md  superspartan.md  verifier.md
src/: lib.rs
