# ---
# tags: zheng, config
# crystal-type: source
# crystal-domain: comp
# ---
[package]
name = "zheng"
version = "0.1.0"
edition = "2024"
description = "proof system: SuperSpartan IOP + WHIR PCS + sumcheck"
license = "Cyber"

[dependencies]
nebu = { path = "../nebu" }
hemera = { path = "../hemera" }
